Update Excel Import Capability
Testing Open.XLM to import participants and group enrollment from an Excel template in /DataImports

#9

--- a/MEInsight.Web/Areas/Settings/Views/Home/Index.cshtml
+++ b/MEInsight.Web/Areas/Settings/Views/Home/Index.cshtml
@@ -116,7 +116,7 @@
             <div class="card-body">
                 <h5 class="card-title">Programs Settings</h5>
                 <ul>
-                    <li><a class='' asp-action='Index' asp-controller='Programs'>Programs</a></li>
+                    <li><a class='' asp-action='Index' asp-controller='Programs' asp-area=''>Programs</a></li>
                     <li><a class='' asp-action='Index' asp-controller='ProgramAssessments'>Program Assessments</a></li>
                     <li><a class='' asp-action='Index' asp-controller='ProgramTypes' asp-area='Settings'>Program Types</a></li>
                     <li><a class='' asp-action='Index' asp-controller='ProgramDeliveryTypes' asp-area='Settings'>Program Delivery Types</a></li>
