--- a/MEInsight.Web/Views/Programs/Create.cshtml
+++ b/MEInsight.Web/Views/Programs/Create.cshtml
@@ -35,7 +35,7 @@
                 <!--fk select start-->
                 <label asp-for="RefProgramDeliveryTypeId" class="form-label"></label>
                 <select asp-for="RefProgramDeliveryTypeId" class="form-control form-select" asp-items="ViewBag.RefProgramDeliveryTypeId">
-                    <option disabled selected></option>
+                    <option></option>
                 </select>
                 <span asp-validation-for="RefProgramDeliveryTypeId" class="text-danger"></span>
                 <!--fk select end-->
@@ -97,7 +97,7 @@
                 <!--fk select start-->
                 <label asp-for="RefOrganizationTypeId" class="form-label"></label>
                 <select asp-for="RefOrganizationTypeId" class="form-control form-select" asp-items="ViewBag.RefOrganizationTypeId">
-                    <option disabled selected></option>
+                    <option></option>
                 </select>
                 <span asp-validation-for="RefOrganizationTypeId" class="text-danger"></span>
                 <!--fk select end-->
