--- a/MEInsight.Web/Views/Programs/Edit.cshtml
+++ b/MEInsight.Web/Views/Programs/Edit.cshtml
@@ -36,6 +36,7 @@
                 <!--fk select start-->
                 <label asp-for="RefProgramDeliveryTypeId" class="form-label"></label>
                 <select asp-for="RefProgramDeliveryTypeId" class="form-control form-select" asp-items="ViewBag.RefProgramDeliveryTypeId">
+                    <option></option>
                 </select>
                 <span asp-validation-for="RefProgramDeliveryTypeId" class="text-danger"></span>
                 <!--fk select end-->
