--- a/MEInsight.Web/Views/Organizations/Delete.cshtml
+++ b/MEInsight.Web/Views/Organizations/Delete.cshtml
@@ -77,10 +77,10 @@
             @Html.DisplayFor(model => model.IsOrganizationUnit)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentOrganization)
+            @Html.DisplayNameFor(model => model.ParentOrganizations)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ParentOrganization.OrganizationCode)
+            @Html.DisplayFor(model => model.ParentOrganizations.OrganizationCode)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OrganizationTypes)
