--- a/MEInsight.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MEInsight.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,48 +2,87 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = @Localizer["Log in"].Value;
+    ViewData["Title"] = @Localizer[""].Value;
 }
 
 <h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-6 col-sm-12">
-        <section>
-            <form id="account" method="post">
-                <h4>@Localizer["Use your application account to log in"].</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="mb-3">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="mb-3">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="mb-3">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+
+<section>
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-xl-10">
+                <div class="card rounded-3">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <div class="card-body p-md-5 mx-md-4">
+
+                                <div class="text-center">
+                                    <img src="https://www.edc.org/sites/all/themes/edc/logo.png?78728732828"
+                                         class="m-5"
+                                         style="width: 185px;" alt="logo">
+                                </div>
+
+                                <form id="account" method="post">
+                                    <div>@Localizer["Use your application account to Log In"]</div>
+
+                                    <div class="form-outline mb-4">
+                                        <div asp-validation-summary="All" class="text-danger"></div>
+                                        <div class="mb-3">
+                                            <label asp-for="Input.Email" ></label>
+                                            <input asp-for="Input.Email" placeholder="Enter your Email address" class="form-control" />
+                                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-outline mb-4">
+                                        <div class="mb-3">
+                                            <label asp-for="Input.Password"></label>
+                                            <input asp-for="Input.Password" class="form-control" placeholder="Enter your Password" />
+                                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <div class="checkbox">
+                                            <label asp-for="Input.RememberMe">
+                                                <input asp-for="Input.RememberMe" />
+                                                @Html.DisplayNameFor(m => m.Input.RememberMe)
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <button type="submit" class="btn btn-primary">@Localizer["Log in"]</button>
+                                    </div>
+                                    @*<div class="mb-3">
+                                        <p>
+                                        <a id="forgot-password" asp-page="./ForgotPassword">@Localizer["Forgot your password?"]</a>
+                                        </p>
+                                        </div>*@
+                                </form>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-6 d-flex align-items-center bg-primary">
+                            <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                                <h4 class="mb-4">Equal opportunity for all</h4>
+                                <p class="small mb-0">
+                                    M&E Insight is an open-source monitoring and evaluation data
+                                    management system for international development projects,
+                                    created by Education Development Center (EDC), that can be
+                                    easily and quickly scaled and customized to any project.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="mb-3">
-                    <button type="submit" class="btn btn-primary">@Localizer["Log in"]</button>
-                </div>
-                @*<div class="mb-3">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">@Localizer["Forgot your password?"]</a>
-                    </p>
-                </div>*@
-            </form>
-        </section>
+            </div>
+        </div>
     </div>
-</div>
+</section>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+
+
