Add Localization to Login UI
Updated the Login page to include @Localizer for language resources.

--- a/MEInsight.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MEInsight.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -64,12 +64,9 @@
                         </div>
                         <div class="col-lg-6 d-flex align-items-center bg-primary">
                             <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                                <h4 class="mb-4">Equal opportunity for all</h4>
+                                <h4 class="mb-4">@Localizer["Equal opportunity for all"]</h4>
                                 <p class="small mb-0">
-                                    M&E Insight is an open-source monitoring and evaluation data
-                                    management system for international development projects,
-                                    created by Education Development Center (EDC), that can be
-                                    easily and quickly scaled and customized to any project.
+                                    @Localizer["M&E Insight is an open-source monitoring and evaluation data management system for international development projects, created by Education Development Center (EDC), that can be easily and quickly scaled and customized to any project."]
                                 </p>
                             </div>
                         </div>
