Fix null reference warnings when upgrading to .NET 6
In .NET6 templates, nullable reference types are enabled by default.
https://github.com/edc-it/MEInsight/blob/61a80d3ed6a4ffb5dd2396c378febbcc660bdb37/MEInsight.Web/MEInsight.Web.csproj#L4-L5

https://docs.microsoft.com/en-us/dotnet/csharp/nullable-references

These updates resolves nullable warnings. Testing is pending.

#8

--- a/MEInsight.Web/Views/GroupEnrollments/Attendance.cshtml
+++ b/MEInsight.Web/Views/GroupEnrollments/Attendance.cshtml
@@ -71,13 +71,13 @@
                                         @Html.Hidden("attendance[" + (@i + 10) + "].GroupEnrollmentId", Model[i].GroupEnrollmentId)
                                         @Html.Hidden("attendance[" + (@i + 10) + "].GroupId", Model[i].GroupId)
 
-                                        @Html.Raw(Model[i].Participants.Name)
+                                        @Html.Raw(Model[i].Participants?.Name)
                                     </td>
                                     <td>
-                                        @Html.Raw(Model[i].Participants.ParticipantCode)
+                                        @Html.Raw(Model[i].Participants?.ParticipantCode)
                                     </td>
                                     <td>
-                                        @Html.Raw(Model[i].Participants.Sex.SexId)
+                                        @Html.Raw(Model[i].Participants?.Sex?.SexId)
                                     </td>
                                     <td class="text-end">
                                         <div class="input-group input-group-sm d-flex justify-content-end">
