--- a/MEInsight.Web/Views/Shared/_Layout.cshtml
+++ b/MEInsight.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <partial name="_Favicons.cshtml" />
+
     <title>@ViewData["Title"]</title>
     <!-- Bootstrap v5.1.3 + custom theme -->
     <link rel="stylesheet" href="~/css/bootstrap-theme-endeavour.min.css" asp-append-version="true" />
